--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="./recipes/roastedchicken.html" target="_blank" rel="noopener noreferrer">Juicy Roasted Chicken</a>
     </body>
 </html>
