--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/roastedchicken.html" target="_blank" rel="noopener noreferrer">Juicy Roasted Chicken</a>
+        <ul>
+            <li><a href="./recipes/roastedchicken.html" target="_blank" rel="noopener noreferrer">Juicy Roasted Chicken</a></li>
+            <li><a href="./recipes/potatosalad.html" target="_blank" rel="noopener noreferrer">World's Best Potato Salad</a></li>
+            <li><a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Homemade Lasagna</a></li>
+        </ul>
     </body>
 </html>
